refactor rsc, rewrite MachineMenuPreview